image data store in postgreSQL

--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  //- h1= message
+  //- h2= error.status
+  //- pre #{error.stack}
+  //- h1 "How are you doing"
+  //- each name in users
+  //-   li #{name}
